# ukgeolocate

./: .gitignore  README.md  pyproject.toml  run_tests.py
src/ukgeolocate/: __init__.py  _db.py  address.py  cli.py  client.py  exceptions.py  models.py  postcode.py
tests/: conftest.py  test_address.py  test_client.py  test_postcode.py
