[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ukgeolocate"
version = "0.1.0"
description = "Resolve UK postcode + address to UPRN and OS coordinates"
requires-python = ">=3.9"

[project.scripts]
ukgeolocate = "ukgeolocate.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
